# python-boilerlate

./: .editorconfig  LICENSE  README.md  pylintrc  pyproject.toml
tests/: test_boilerplate.py
